--- a/EpamGameStore/epam-gamestore/src/components/ComponentsCSS/GameShowcase.css
+++ b/EpamGameStore/epam-gamestore/src/components/ComponentsCSS/GameShowcase.css
@@ -4,7 +4,8 @@
     flex-wrap: wrap;
     max-width: 1250px;
     margin: 0 auto;
-    height: 100%;
+    height: fit-content;
+    min-height: 100%;
     flex: 1 1 100%;
     flex-grow: 1;
     align-content: start;
@@ -16,4 +17,13 @@
 }
 .Pagination{
     margin:auto;
+}
+.ShowcaseHeader{
+    display: flex;
+    width: 100%;
+    margin-top: 10px;
+    flex-direction: column;
+}
+.test::placeholder{
+    color:white;
 }
