--- a/EpamGameStore/epam-gamestore/src/components/ComponentsCSS/FullGameViewComponent.css
+++ b/EpamGameStore/epam-gamestore/src/components/ComponentsCSS/FullGameViewComponent.css
@@ -15,6 +15,7 @@
 }
 .GamePicture{
     align-content: center;
+    position: relative;
 }
 
 .GameInfo{
@@ -44,4 +45,29 @@
 .GameCardHeader{
     display: flex;
     justify-content: space-between;
+}
+
+.AddImageButton{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: rgba(83, 83, 83, 0.397);
+    padding: 10px;
+}
+
+.GamePicture:hover .AddImageButton{
+    display:block;
+}
+
+.GamePicture input{
+    width: 80%;
+    height: 40vh;
+    object-fit:contain;
+    margin-left: auto;
+    display: block;
+    margin-right: auto;
 }
