--- a/EpamGameStore/epam-gamestore/src/components/ComponentsCSS/GameItemCard.css
+++ b/EpamGameStore/epam-gamestore/src/components/ComponentsCSS/GameItemCard.css
@@ -12,6 +12,7 @@
 .Custom{
     margin-left: 15px;
     width: fit-content;
+    position: relative;
 }
 .CardPrice{
     color: white;
@@ -62,4 +63,45 @@
 .custom-bg a:hover{
     text-decoration: none;
     color: white;
+}
+.card:hover .HoveringMenu{
+    display: block;
+}
+
+.HoveringMenu{
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 65%;
+    top: 35%;
+    left: 0;
+    z-index: 1;
+    background-color: rgba(136, 136, 136, 0.37);
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+}
+.HoveringMenu img{
+    width: 25%;
+    height: 25%;
+    object-fit: contain;
+}
+.EditGameScreen{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    min-height: 100vh;
+    background-color: rgba(0, 0, 0, 0.664);
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.EditGameForm{
+
 }
