story 2.6 and 2.7 done

--- a/EpamGameStore/epam-gamestore/src/components/ComponentsCSS/AuthPanel.css
+++ b/EpamGameStore/epam-gamestore/src/components/ComponentsCSS/AuthPanel.css
@@ -27,7 +27,7 @@
     height: 4vh;
 }
 
-.MainForm button{
+.MainPanel button{
     display: flex;
     justify-content: center;
     margin-top: 20px;
