--- a/EpamGameStore/epam-gamestore/src/components/ComponentsCSS/GameItemCard.css
+++ b/EpamGameStore/epam-gamestore/src/components/ComponentsCSS/GameItemCard.css
@@ -103,6 +103,20 @@
 }
 
 .EditGameForm{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    width: 20vw;
+    height: fit-content;
+    border-radius: 20px;
+    background-color: rgb(155, 155, 155);
     border-color: grey;
     border-radius: 15px;
+}
+
+.text-button:hover{
+    font-size: 1.8rem;
+    color: white;
 }
